fix: invert rewardsWith and penalizesBy handling of mixed constraints (#2142)
Before, rewardsWith expects negative impact values and penalizesBy
expects positive impact values.

Now, rewardsWith expects positive impact value and penalizesBy expect
negative impact values.